16_Services_Load_Balancing_and_Networking/gradiva/ex02-simple-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-server
