16_Services_Load_Balancing_and_Networking/gradiva/ex03-simple-server-svc-client-ip-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-svc
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-server
