16_Services_Load_Balancing_and_Networking/gradiva/ex04-simple-server-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: simple-server
