16_Services_Load_Balancing_and_Networking/gradiva/ex05-simple-server-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: simple-server
